# AsunaEngine

./: .gitignore  GroupControl.py  README.md
AsunaEngine/: CMakeLists.txt  CMakeSettings.json
AsunaEngine/Assets/Models/: asuna.fbx
AsunaEngine/Assets/Shaders/: Color_Axis_VS.hlsl  Color_Mesh_PS.hlsl  Color_Mesh_VS.hlsl  ConstantBuffer.hlsl  Diffuse_Mesh_PS.hlsl  Diffuse_Mesh_VS.hlsl  Global_PostProcessGray_VS.hlsl  Global_PostProcessNone_PS.hlsl  Global_PostProcess_PS.hlsl  Global_ShadowMapping_PS.hlsl  Global_ShadowMapping_VS.hlsl  Lighting.hlsl  VertexData.hlsl
AsunaEngine/AsunaEditor/: CMakeLists.txt  WindowsEditor.cpp  WindowsEditor.h  main.cpp
AsunaEngine/AsunaEditor/Component/: CameraCmptEditor.cpp  CameraCmptEditor.h  LightCmptEditor.cpp  LightCmptEditor.h  MeshRenderEditor.cpp  MeshRenderEditor.h  Transform.cpp  Transform.h  TransformCmptEditor.cpp  TransformCmptEditor.h
AsunaEngine/AsunaEditor/Events/: EditorEventManager.h  EditorEventType.cpp
AsunaEngine/AsunaEditor/Panels/: BasePanel.h  GamePanel.cpp  GamePanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  LogPanel.cpp  LogPanel.h
AsunaEngine/AsunaEngine/: AsunaEngine.sln  CMakeLists.txt
AsunaEngine/AsunaEngine/Application/: Application.cpp  Application.h
AsunaEngine/AsunaEngine/AssetLoader/: AssetLoader.cpp  AssetLoader.h
AsunaEngine/AsunaEngine/AsunaEditor/: App.xaml  App.xaml.cs  AsunaEditor.csproj  MainWindow.xaml  MainWindow.xaml.cs  ProjectBrowser.xaml  ProjectBrowser.xaml.cs
AsunaEngine/AsunaEngine/AsunaEngine/: Assert.h  AsunaEngine.vcxproj  AsunaEngine.vcxproj.filters  BuildType.h  DLLExport.h  DirectX11Renderer.cpp  DirectX11Renderer.h  DirectX12Renderer.cpp  DirectX12Renderer.h  IModule.h  IRender.cpp  IRender.h  Renderer.cpp  Renderer.h  Vector.h
AsunaEngine/AsunaEngine/AsunaEnginePlayer/: Application.cpp  Application.h  AsunaEngineWindowsPlayer.vcxproj  AsunaEngineWindowsPlayer.vcxproj.filters  WindowsPlayer.cpp  WindowsPlayer.h  main.cpp
AsunaEngine/AsunaEngine/AsunaEngineUnitTest/: AsunaEngineMathTest.cpp  AsunaEngineUnitTest.vcxproj  AsunaEngineUnitTest.vcxproj.filters
AsunaEngine/AsunaEngine/GUI/: GUI.cpp  GUI.h
AsunaEngine/AsunaEngineUnitTest/: CMakeLists.txt  Test_Math.cpp
AsunaEngine/AsunaPlayer/: CMakeLists.txt  main.cpp
AsunaEngine/Editor/: CMakeLists.txt  WindowsEditor.cpp  WindowsEditor.h  main.cpp
AsunaEngine/Engine/: CMakeLists.txt
AsunaEngine/Player/: CMakeLists.txt  main.cpp
AsunaEngine/UnitTest/: Test_Math.cpp
(+437 files in other folders)
